Move to ReadableSchema for DidoData.